@@ -317,8 +317,41 @@ class JInstallationModelDatabase extends JModelLegacy
 			$this->setError(JText::sprintf('INSTL_ERROR_DB', $this->getError()));
 			return false;
 		}
+		
+		$this->postInstallSampleData($db);
 
 		return true;
+	}
+
+	/**
+	 * method to update the user id of the sample data content to the new rand user id
+	 * 
+	 * @param Database connector object $db 
+	 */
+	protected function postInstallSampleData($db) {
+		// Create the ID for the root user
+		$randUserId = mt_rand(1, 1000);
+
+		$session = JFactory::getSession();
+		$session->set('randUserId', $randUserId);
+		
+		// update all created_by field of the tables with the random user id
+		// categories (created_user_id), contact_details, content, newsfeeds, weblinks
+		$updates_array = array(
+			'categories' => 'created_user_id',
+			'contact_details' => 'created_by',
+			'content' => 'created_by',
+			'newsfeeds' => 'created_by',
+			'weblinks' => 'created_by',
+		);
+		foreach ($updates_array as $table => $field) {
+			$db->setQuery(
+				'UPDATE '.$db->quoteName('#__' . $table) .
+				' SET '.$db->quoteName($field).' = '.$db->Quote($randUserId)
+			);
+			$db->query();
+		}
+
 	}
 
 	/**
